--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Birb2D"]
 	path = Birb2D
 	url = https://github.com/Toasterbirb/Birb2D
+[submodule "birb2d"]
+	path = birb2d
+	url = https://github.com/Toasterbirb/birb2d
